add display person to DOM functionalities

--- a/index.html
+++ b/index.html
@@ -23,16 +23,12 @@
     <div class="block bcg-black"></div>
     <div class="block">
       <div class="container">
-        <img
-          src="https://randomuser.me/api/portraits/men/75.jpg"
-          alt=""
-          class="user-img"
-        />
-        <p class="user-title">my name is</p>
-        <p class="user-value">john smith</p>
+        <img src="" alt="" class="user-img" />
+        <p class="user-title"><!-- pass from JS --></p>
+        <p class="user-value"><!-- pass from JS --></p>
         <div class="values-list">
           <!--icon-->
-          <button class="icon active" data-label="name">
+          <button class="icon" data-label="name">
             <span class="fa-regular fa-user"></span>
           </button>
           <!--icon-->
